feat: nuevos esquemas gql

--- a/manifest.json
+++ b/manifest.json
@@ -18,13 +18,50 @@
   "credentialType": "absolute",
   "policies": [
     {
+      "name": "graphql-query"
+    },
+    {
+      "name": "ADMIN_DS"
+    },
+    {
+      "name": "view-seller"
+    },
+    {
+      "name": "save-seller"
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "api.vtex.com",
+        "path": "/dataentities/*"
+      }
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "portal.vtexcommercestable.com.br",
+        "path": "api/catalog"
+      }
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "portal.vtexcommercestable.com.br",
+        "path": "*"
+      }
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "httpstat.us",
+        "path": "*"
+      }
+    },
+    {
       "name": "colossus-fire-event"
     },
     {
       "name": "colossus-write-logs"
-    },
-    {
-      "name": "graphql-query"
     }
   ],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
