--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-example",
-  "vendor": "vtex",
+  "vendor": "estilospe",
   "version": "1.0.1",
   "title": "GraphQL Example",
   "description": "Reference app for VTEX IO GraphQL Services",
