--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-example",
+  "name": "graphql-service",
   "vendor": "estilospe",
   "version": "1.0.1",
   "title": "GraphQL Example",
